--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,69 @@
-/.phpunit.cache
+# =========================
+# Laravel
+# =========================
+
+/vendor
 /node_modules
+
 /public/build
 /public/hot
 /public/storage
-/storage/*.key
-/storage/pail
-/vendor
-.env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-/auth.json
-/.fleet
-/.idea
-/.nova
-/.vscode
-/.zed
+
 /storage/*
 !/storage/.gitignore
 !/storage/**/.gitkeep
+
 /storage/logs/*
 !/storage/logs/.gitkeep
-# composer.lock
-docker-compose.yml
-/docker
-/storage/logs/laravel.log
-*.log
-.DS_Store
-.env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
-/.fleet
-/.idea
-/.nova
-/.phpunit.cache
-/.vscode
-/.zed
-/auth.json
-/node_modules
-/public/build
-/public/hot
-/public/storage
+
 /storage/*.key
 /storage/pail
-/vendor
-Homestead.json
-Homestead.yaml
+
+/bootstrap/cache/*
+!.gitignore
+
+# =========================
+# Environment files
+# =========================
+
+.env
+.env.*
+!.env.example
+
+# =========================
+# Logs & cache
+# =========================
+
+*.log
+.phpunit.result.cache
+.phpunit.cache
+
+# =========================
+# IDE / OS
+# =========================
+
+/.idea
+/.vscode
+/.fleet
+/.nova
+/.zed
+.DS_Store
 Thumbs.db
 
+# =========================
+# Docker / Homestead
+# =========================
+
+docker-compose.yml
+/docker
+Homestead.json
+Homestead.yaml
+
+# =========================
+# Auth / misc
+# =========================
+
+/auth.json
+npm-debug.log
+yarn-error.log
+lerna-debug.log*
